SockShopChart/templates/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sockshop-ingress
  namespace: sock-shop
spec:
  ingressClassName: nginx
  rules:
    - host: sockshop.countyemi.site
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: front-end
                port:
                  number: 80
    - host: grafana.countyemi.site
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: grafana
                port:
                  number: 80
    - host: alert.countyemi.site
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: prometheus-alertmanager
                port:
                  number: 80
